<resources>
    <string name="app_name">My Application recycle_view</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_blood_pressure_activity">血壓報告</string>

    <string name="login_text">LOG IN</string>
    <string name="create_text">CREATE ACCOUNT</string>
    <string name="reset_text">SEND RESET LINK</string>

    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="forgot_page_hint">Back to</string>

    <string name="login_pic">Person</string>
    <string name="email_pic">Email</string>

    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_page_title">Already have an Account?</string>
    <string name="forgot_page_title">Forgot Password?</string>
    <string name="login_page_link">Log In</string>
    <string name="sign_up_link">Create</string>
</resources>